2005-09-26  Andy Wingo  <wingo@pobox.com>

	* src/htdocs/news/Makefile.am: Add rule to generate
	status-rss-1.0.xml.

	* src/htdocs/news/status.xml: Dump the status into an xml file.

	* src/htdocs/news/status2rss-1.0.xsl: New file, copied from the
	news one.

2005-09-17  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/plugins.xsl:
	* src/htdocs/page.xsl:
	  make sure titles show up

2005-09-15  Philippe Khalaf <burger at speedy dor org>

	* src/htdocs/documentation/rtp.xml:
	  Updating the rtp docs
	  
2005-09-11  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/documentation/Makefile.am:
	* src/htdocs/documentation/index.xml:
	* src/htdocs/documentation/plugins.xml:
	* src/htdocs/documentation/splitup.xml:
	  First stab at centralizing docs for all plug-ins

2005-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/news/news.xml:
	  releasing 0.9.x tarballs

2005-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/releases/gstreamer/0.9.2.xml:
	  add bugs fixed

2005-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/modules/modules.xml:
	  editor -> stable
	* src/htdocs/releases/releases.xsl:
	  fix double slash in cvs links in release notes

2005-09-06  Thomas Vander Stichele  <thomas at apestaart dot org>

	* src/htdocs/entities.gst:
	* src/htdocs/releases/gst-ffmpeg/0.8.0.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.1.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.2.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.3.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.4.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.5.xml:
	* src/htdocs/releases/gst-ffmpeg/0.8.6.xml:
	* src/htdocs/releases/gst-monkeysaudio/0.8.0.xml:
	* src/htdocs/releases/gst-player/0.6.0.xml:
	* src/htdocs/releases/gst-player/0.8.0.xml:
	* src/htdocs/releases/gst-plugins-bad/0.9.1.xml:
	* src/htdocs/releases/gst-plugins-base/0.9.1.xml:
	* src/htdocs/releases/gst-plugins-base/0.9.2.xml: