@@ -1,3 +1,7 @@
+2005-09-28  Andy Wingo  <wingo@pobox.com>
+
+	* src/htdocs/news/status.xml: Dump.
+
 2005-09-26  Andy Wingo  <wingo@pobox.com>
 
 	* src/htdocs/news/Makefile.am: Add rule to generate
